# linkcli

./: CMakeLists.txt  README.md
docs/: linker_snippet.ld
examples/: example_usage.c
include/: cli.h  cli_config.h  cli_cpp.hpp  log.h  log_config.h  ring_buffer.h
sim/: cli_sim  main.c  uart_stub.c  uart_stub.h
src/: cli.c  log.c  ring_buffer.c
ui/: index.html  server.py
